--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="toggle">
         <i class="fa-solid fa-bars"></i>
       </div>
-       <div class="sidebar">
+      <div class="sidebar">
         <ul>
           <li>
             <a class="toggle-ul">
@@ -72,13 +72,13 @@
             </a>
           </li>
           <li>
-            <a href="projects.html" >
+            <a href="projects.html">
               <i class="fa-solid fa-people-group"></i>
               <span>المشاريع</span>
             </a>
           </li>
-             <li>
-            <a href="projects.html" >
+          <li>
+            <a href="projects.html">
               <i class="fa-solid fa-gear"></i>
               <span>الإعدادات</span>
             </a>
@@ -93,7 +93,7 @@
       </div>
       <div class="content">
         <!-- start head  -->
-       <div class="header">
+        <div class="header">
           <div class="info">
             <h3>مرحبا د/ محمد</h3>
             <span>البوابة الالكترونية للنظام الأكاديمي</span>
@@ -362,13 +362,13 @@
                       <span>١٢٠ طالب</span>
                     </div>
                   </div>
-                  <div class="progress progress2 ">
+                  <div class="progress progress2">
                     <div
                       role="progressbar"
                       aria-valuenow="65"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="--value: 80 "
+                      style="--value: 80"
                     ></div>
                   </div>
                 </div>
@@ -379,6 +379,7 @@
         </div>
         <!-- end main-content  -->
       </div>
+      <h1>kareem ahmed maawad</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
