--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <!-- end main-content  -->
       </div>
       <h1>kareem ahmed maawad</h1>
-      <h1>kareem ahmed maawad</h1>
+      <h1>fatma mohamed</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
