edit index file

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         </div>
         <!-- end main-content  -->
       </div>
-      <h1>kareem ahmed maawad</h1>
+      <h1>kareem</h1>
       <h1>fatma mohamed</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
