--- a/the-audience.html
+++ b/the-audience.html
@@ -22,7 +22,7 @@
       <div class="toggle">
         <i class="fa-solid fa-bars"></i>
       </div>
-     <div class="sidebar">
+      <div class="sidebar">
         <ul>
           <li>
             <a class="toggle-ul">
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a href="index.html" >
+            <a href="index.html">
               <i class="fa-solid fa-table"></i>
               <span>لوحة القيادة</span>
             </a>
@@ -72,13 +72,13 @@
             </a>
           </li>
           <li>
-            <a href="projects.html" >
+            <a href="projects.html">
               <i class="fa-solid fa-people-group"></i>
               <span>المشاريع</span>
             </a>
           </li>
-             <li>
-            <a href="projects.html" >
+          <li>
+            <a href="projects.html">
               <i class="fa-solid fa-gear"></i>
               <span>الإعدادات</span>
             </a>
@@ -92,7 +92,7 @@
         </ul>
       </div>
       <div class="the-audience">
-       <!-- start header  -->
+        <!-- start header  -->
         <div class="header">
           <div class="info">
             <h3>مرحبا د/ محمد</h3>
@@ -113,91 +113,131 @@
             </div>
           </div>
         </div>
-         <!-- end header  -->
+        <!-- end header  -->
         <div class="row pt-5 d-flex justify-content-end main-content">
-                <div class=" d-flex ">
+          <div class="d-flex justify-content-between">
+            <div class="d-flex col-6 col-lg-4">
               <h6 class="p-2 text1 px-4 rounded-pill">المحاضرات</h6>
               <h6 class="p-2 text2 px-4 me-2 rounded-pill">تسجيل الحضور</h6>
             </div>
 
+            <div class="col-6 col-lg-4 pb-4 main-button d-flex">
+              <div class="dropdown ps-2">
+                <button
+                  class="btn btn-secondary dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Dropdown
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <button class="dropdown-item" type="button">Action</button>
+                  </li>
+                  <li>
+                    <button class="dropdown-item" type="button">
+                      Another action
+                    </button>
+                  </li>
+                  <li>
+                    <button class="dropdown-item" type="button">
+                      Something else here
+                    </button>
+                  </li>
+                </ul>
+              </div>
+              <button type="button" class="btn btn-warning text-light">
+                اضافة محاضرة <i class="fa-solid fa-plus pe-3"></i>
+              </button>
+            </div>
+          </div>
           <div class="col-12 pt-3">
             <div class="card">
-            <div class="card-body">
-              <div class="row d-flex justify-content-between  ">
-                <div class="col-5">
-                  <h5 class="">المحاضره الاولي</h5>
-                  <p class="">الخطاب الخارجي</p>
-                </div>
-                <div class="col-1 d-flex  justify-content-cenert align-items-center">
-            <i class="fa-solid fa-chevron-left fs-5 "></i>
+              <div class="card-body">
+                <div class="row d-flex justify-content-between">
+                  <div class="col-5">
+                    <h5 class="">المحاضره الاولي</h5>
+                    <p class="">الخطاب الخارجي</p>
+                  </div>
+                  <div
+                    class="col-1 d-flex justify-content-cenert align-items-center"
+                  >
+                    <i class="fa-solid fa-chevron-left fs-5"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-            <div class="col-12 pt-3">
+          <div class="col-12 pt-3">
             <div class="card">
-            <div class="card-body">
-              <div class="row d-flex justify-content-between ">
-                <div class="col-5 ">
-                  <h5 class="">المحاضره الاولي</h5>
-                  <p class="">الخطاب الخارجي</p>
-                </div>
-                <div class="col-1 d-flex  justify-content-cenert align-items-center">
-            <i class="fa-solid fa-chevron-left fs-5 "></i>
+              <div class="card-body">
+                <div class="row d-flex justify-content-between">
+                  <div class="col-5">
+                    <h5 class="">المحاضره الاولي</h5>
+                    <p class="">الخطاب الخارجي</p>
+                  </div>
+                  <div
+                    class="col-1 d-flex justify-content-cenert align-items-center"
+                  >
+                    <i class="fa-solid fa-chevron-left fs-5"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-           <div class="col-12 pt-3">
+          <div class="col-12 pt-3">
             <div class="card">
-            <div class="card-body">
-              <div class="row d-flex justify-content-between  ">
-                <div class="col-5 ">
-                  <h5 class="">المحاضره الاولي</h5>
-                  <p class="">الخطاب الخارجي</p>
-                </div>
-                <div class="col-1 d-flex  justify-content-cenert align-items-center">
-            <i class="fa-solid fa-chevron-left fs-5 "></i>
+              <div class="card-body">
+                <div class="row d-flex justify-content-between">
+                  <div class="col-5">
+                    <h5 class="">المحاضره الاولي</h5>
+                    <p class="">الخطاب الخارجي</p>
+                  </div>
+                  <div
+                    class="col-1 d-flex justify-content-cenert align-items-center"
+                  >
+                    <i class="fa-solid fa-chevron-left fs-5"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-           <div class="col-12 pt-3">
+          <div class="col-12 pt-3">
             <div class="card">
-            <div class="card-body">
-              <div class="row d-flex justify-content-between ">
-                <div class="col-5 ">
-                  <h5 class="">المحاضره الاولي</h5>
-                  <p class="">الخطاب الخارجي</p>
-                </div>
-                <div class="col-1 d-flex  justify-content-cenert align-items-center">
-            <i class="fa-solid fa-chevron-left fs-5 "></i>
+              <div class="card-body">
+                <div class="row d-flex justify-content-between">
+                  <div class="col-5">
+                    <h5 class="">المحاضره الاولي</h5>
+                    <p class="">الخطاب الخارجي</p>
+                  </div>
+                  <div
+                    class="col-1 d-flex justify-content-cenert align-items-center"
+                  >
+                    <i class="fa-solid fa-chevron-left fs-5"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-           <div class="col-12 py-3">
+          <div class="col-12 py-3">
             <div class="card">
-            <div class="card-body">
-              <div class="row d-flex justify-content-between  ">
-                <div class="col-5 ">
-                  <h5 class="">المحاضره الاولي</h5>
-                  <p class="">الخطاب الخارجي</p>
-                </div>
-                <div class="col-1 d-flex  justify-content-cenert align-items-center">
-            <i class="fa-solid fa-chevron-left fs-5 "></i>
+              <div class="card-body">
+                <div class="row d-flex justify-content-between">
+                  <div class="col-5">
+                    <h5 class="">المحاضره الاولي</h5>
+                    <p class="">الخطاب الخارجي</p>
+                  </div>
+                  <div
+                    class="col-1 d-flex justify-content-cenert align-items-center"
+                  >
+                    <i class="fa-solid fa-chevron-left fs-5"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          </div>
-  
         </div>
-        
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
