--- a/the-audience.html
+++ b/the-audience.html
@@ -115,34 +115,32 @@
         </div>
         <!-- end header  -->
         <div class="row pt-5 d-flex justify-content-end main-content">
-          <div class="d-flex justify-content-between">
-            <div class="d-flex col-6 col-lg-4">
-              <h6 class="p-2 text1 px-4 rounded-pill">المحاضرات</h6>
-              <h6 class="p-2 text2 px-4 me-2 rounded-pill">تسجيل الحضور</h6>
+          <div class="d-flex justify-content-between drop-shadow py-2 pt-3 row">
+            <div class="d-flex col-12 col-md-6 col-lg-4">
+              <h6 class="text1 px-4 rounded-pill">المحاضرات</h6>
+              <h6 class="text2 px-4 me-2 rounded-pill">تسجيل الحضور</h6>
             </div>
 
-            <div class="col-6 col-lg-4 pb-4 main-button d-flex">
-              <div class="dropdown ps-2">
+            <div class="col-12 col-md-6 col-lg-4 main-button d-flex">
+              <div class="dropdown ps-4">
                 <button
-                  class="btn btn-secondary dropdown-toggle"
+                  class="btn btn-secondary"
                   type="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  تصنيف
+                  <i class="fa-solid fa-chevron-down pe-2"></i>
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <button class="dropdown-item" type="button">Action</button>
-                  </li>
-                  <li>
                     <button class="dropdown-item" type="button">
-                      Another action
+                      من الاقدم الي الاحدث
                     </button>
                   </li>
                   <li>
                     <button class="dropdown-item" type="button">
-                      Something else here
+                      من الاحدث الي الاقدم
                     </button>
                   </li>
                 </ul>
@@ -152,7 +150,7 @@
               </button>
             </div>
           </div>
-          <div class="col-12 pt-3">
+          <div class="col-12 pt-4">
             <div class="card">
               <div class="card-body">
                 <div class="row d-flex justify-content-between">
@@ -241,7 +239,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
